[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katex = { version = "0.4.6", features = ["wasm-js"], default-features = false }
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
